2008-02-23  Ariel Badichi <abadichi@bezeqint.net>

	Allow ED-IN-EMACS to edit new files.

	* swank.lisp (ed-in-emacs): Make it possible to canonicalize
	filenames of non-existing files.
	(canonicalize-filename): Merged into ed-in-emacs.

2008-02-23  Nikodemus Siivola  <nikodemus@random-state.net>

	If there is no connection, offer the option to start SLIME.

	* slime.el (slime-connection): Ask and maybe start SLIME.
	(slime-selector-method: ?r): No need to ask here any more.

2008-02-23  Helmut Eller  <heller@common-lisp.net>

	In the inspector, show one-element lists as list not as pair.

	* swank.lisp (emacs-inspect cons)

2008-02-23  Zach Beane  <xach@xach.com>

	Add customization variable for the `slime-connect' port.

	* slime.el (slime-port): New variable.

2008-02-22  Mark Evenson <mark.evenson@gmx.at>

	* swank-abcl.lisp (getpid): Return '0' in case of error.
	Apparently needed bacause $PPID isn't not a standard feature.
	"[T]his is not a disentanglement from, but a progressive knotting
	into."

2008-02-22  Mark Harig <idirectscm@aim.com>

	Fix typos: "contribs" -> "contrib".

	* slime-autoloads.el (slime-setup-contribs):
	* slime.el (slime-setup):

2008-02-22  Mark Harig <idirectscm@aim.com>

	Fixes for CLISP 2.44.

	* swank-clisp.lisp (sldb-backtrace, %parse-stack-values):
	sys::frame-up-1 no longer exists; use sys::frame-up instead.

2008-02-22  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-pop-to-location): Slight cleanups.
	(slime-goto-xref, slime-goto-next-xref): Use it.

2008-02-22  Helmut Eller  <heller@common-lisp.net>

	Remove save-restriction-if-possible.

	* slime.el (save-restriction-if-possible): Deleted.  It was only
	used in one place.
	(slime-goto-source-location): Obey widen-automatically.
	(slime-location-offset): New function.

2008-02-21  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-location-to-string): New function.
	(slime-analyze-xrefs): Use it; display definitions defined